src/main/resources/tests/Semantics/good/modeInOut.canAda
with Ada.Text_IO; use Ada.Text_IO;

procedure CallTest is
   Value : integer;
   function TestInOut (X : in out integer) return integer is
    begin
        X := X + 1;
        return X;
    end TestInOut;
begin
   TestInOut(Value); -- Correct
end CallTest;
