src/main/resources/tests/Semantics/bad/modeIn.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestIn is
    X : integer := 0;
    function F(X : in integer) return integer is
        begin
            X := X + 1;
            return X;
        end F;
begin
    X := F(X);
end TestIn;
